--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "2.3.2"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.2.0",
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "socket.io": "^4.1.3",
